--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grey-matter": "^0.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-markdown": "^10.1.0",
     "react-router": "^7.11.0",
     "rehype-highlight": "^7.0.2",
