--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@giscus/react": "^3.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "gray-matter": "^4.0.3",
     "grey-matter": "^0.0.0",
