--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": ">=18.18.0"
+  },
   "dependencies": {
     "@giscus/react": "^3.1.0",
     "@tailwindcss/vite": "^4.1.18",
