--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "engines": {
-    "node": "18.18.x"
+    "node": "24.x.x"
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
